--- a/web.html
+++ b/web.html
@@ -13,20 +13,17 @@
       <div class="dos"></div>
       <div class="tres">
         <p>En un lugar muy lejano…</p>
-
-        
       </div>
       <div class="cuatro">
-        <a class="giro" href="https://microdeveloper.es/">
+        <a class="giro20" href="https://microdeveloper.es/">
           <img src="./camela.png" alt="rebobina payo" />
         </a>
-        <a href="https://microdeveloper.es/curriculum">
+        <a class="giro-20" href="https://microdeveloper.es/curriculum">
           <img src="./boli.png" alt="rebobina payo" />
         </a>
       </div>
       <div class="cinco">
-        
-        <img class="" src="./camela.png" alt="rebobina payo" />
+        <img class="giro-20" class="" src="./camela.png" alt="rebobina payo" />
         <img class="" src="./boli.png" alt="rebobina payo" />
       </div>
     </div>
@@ -34,7 +31,6 @@
     <style>
       * {
         margin: 0;
-
       }
       h1 {
         color: deeppink;
@@ -76,6 +72,7 @@
         justify-content: space-between;
       }
       .cinco {
+        overflow: hidden;
         padding: 50px;
         background-color: coral;
         display: flex;
@@ -83,8 +80,11 @@
         justify-content: space-between;
         align-items: flex-end;
       }
-      .giro {
-        transform: rotate(45deg);
+      .giro20 {
+        transform: rotate(20deg);
+      }
+      .giro-20 {
+        transform: rotate(-20deg);
       }
     </style>
   </body>
